--- a/src/main/resources/assets/mmorpg/lang/ru_ru.json
+++ b/src/main/resources/assets/mmorpg/lang/ru_ru.json
@@ -87,8 +87,8 @@
 
 	"_comment": "MAPS",
 
-	"mmorpg.name.map": "Карта приключений",
-	"mmorpg.tooltip.put_in_mapdevice": "Щелкните правой кнопкой мыши на Картовом устройстве, чтобы использовать",
+	"mmorpg.name.map": "Карта подземелий",
+	"mmorpg.tooltip.put_in_mapdevice": "Щелкните правой кнопкой мыши по Картографическому устройству, чтобы отрыть подземелье",
 	"mmorpg.tooltip.press_shift_more_info": "[Alt]: Описание, [Ctrl]: Скрыть",
 	"mmorpg.tooltip.affix_rarity_lootbonus": "Бонус к добыче от редкости аффикса",
 	"entity.mmorpg.zombie": "Зомби",
@@ -112,13 +112,13 @@
 	"effect.mmorpg.meal": "Повышение эффективности еды",
 	"effect.mmorpg.fish": "Повышение эффективности морепродуктов",
 	"effect.mmorpg.potion": "Повышение эффективности зелья",
-	"item.mmorpg.loot_crate.common": "Обычный лут-кейс",
-	"item.mmorpg.loot_crate.magic": "Магический лут-кейс",
-	"item.mmorpg.loot_crate.rare": "Редкий лут-кейс",
-	"item.mmorpg.loot_crate.relic": "Легендарный лут-кейс",
-	"item.mmorpg.loot_crate.unique": "Уникальный лут-кейс",
-	"item.mmorpg.loot_crate.gem": "Лут-кейс с самоцветами",
-	"item.mmorpg.loot_crate.rune": "Лут-кейс с рунами",
+	"item.mmorpg.loot_crate.common": "Обычный ящик с добычей",
+	"item.mmorpg.loot_crate.magic": "Магический ящик с добычей",
+	"item.mmorpg.loot_crate.rare": "Редкий ящик с добычей",
+	"item.mmorpg.loot_crate.relic": "Легендарный ящик с добычей",
+	"item.mmorpg.loot_crate.unique": "Уникальный ящик с добычей",
+	"item.mmorpg.loot_crate.gem": "Ящик с самоцветами",
+	"item.mmorpg.loot_crate.rune": "Ящик с рунами",
 	"item.mmorpg.loot_table_chest": "Сумка награды за уровень",
 	"mmorpg.one_of_a_kind.passive_spell": "Пассивное заклинание",
 	"mmorpg.one_of_a_kind.start": "Начало",
@@ -715,13 +715,13 @@
 	"mmorpg.item_tips.map_league_spawn": "Может появиться: ",
 	"mmorpg.item_tips.need_key": "Требуется ключ: ",
 	"mmorpg.item_tips.outcome_tip.locale_context_for_translator": "для подсказок по валюте",
-	"mmorpg.item_tips.outcome_tip": "%1$s, Базовый вес: %2$s",
-	"mmorpg.item_tips.potential": "Потенциал: %1$s%%",
+	"mmorpg.item_tips.outcome_tip": "%1$s, Базовый вес: %2$s ",
+	"mmorpg.item_tips.potential": "Потенциал: %1$s%% ",
 	"mmorpg.item_tips.prefix_stats": "Префиксные характеристики: ",
-	"mmorpg.item_tips.quality": "Качество: %1$s%%",
+	"mmorpg.item_tips.quality": "Качество: %1$s%% ",
 	"mmorpg.item_tips.rarity_tip": "Редкость: ",
 	"mmorpg.item_tips.remaining_aura_capacity": "Оставшаяся емкость ауры: ",
-	"mmorpg.item_tips.restores": "Восстанавливает: %1$s%%",
+	"mmorpg.item_tips.restores": "Восстанавливает: %1$s%% ",
 	"mmorpg.item_tips.rune_item_usage": "Используйте на экипировке с гнездами для вставки\nЕсли такая же руна уже вставлена, перебрасывает ее\n\nВсе Рунные слова показаны в Вики.\nИспользуйте, чтобы просмотреть крафтимые Рунные слова.",
 	"mmorpg.item_tips.socket_extractor_usage": "Щелкните по экипировке, чтобы извлечь самоцвет.",
 	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "Щелкните по предметам, чтобы удалить их душу.\nПредмет остается, но его характеристики будут удалены.",
@@ -730,7 +730,7 @@
 	"mmorpg.item_tips.stat_req": "%1$s Мин: ",
 	"mmorpg.item_tips.stone_repaire_durability": "Восстанавливает %1$s прочности.",
 	"mmorpg.item_tips.suffix_stats": "Суффиксные характеристики: ",
-	"mmorpg.item_tips.support_gem_cost": "Множитель стоимости ресурса: %1$s%%",
+	"mmorpg.item_tips.support_gem_cost": "Множитель стоимости ресурса: %1$s%% ",
 	"mmorpg.item_tips.support_gem_only_one": "Разрешается только один: ",
 	"mmorpg.item_tips.tier_tip": "Уровень: ",
 	"mmorpg.item_tips.tp_back_item": "Щелкните правой кнопкой мыши, чтобы выйти из подземелья\nПокидает подземелье.",
@@ -875,7 +875,7 @@
 	"mmorpg.spell.mage_circle": "Магический круг",
 	"mmorpg.spell.magma_flower": "Лава цветок",
 	"mmorpg.spell.meteor": "Метеорит",
-	"mmorpg.spell.meteor_arrow": "Меteoric стрела",
+	"mmorpg.spell.meteor_arrow": "Метеорическая стрела",
 	"mmorpg.spell.minion_explosion": "Взрыв миньонов",
 	"mmorpg.spell.nature_balm": "Природная мазь",
 	"mmorpg.spell.pet_basic": "Основная атака питомца",
@@ -916,57 +916,57 @@
 	"mmorpg.spell.vamp_blood": "Кровавый вампиризм",
 	"mmorpg.spell.whirlwind": "Вихрь",
 	"mmorpg.spell.wish": "Желание",
-	"mmorpg.support_gem.ailment_damage_less_hit_dmg": "Поддержка урона от недугов",
-	"mmorpg.support_gem.aoe_dmg": "Поддержка фокуса области",
-	"mmorpg.support_gem.bleed_chance": "Поддержка шанса кровотечения",
-	"mmorpg.support_gem.burn_chance": "Поддержка шанса обжига",
-	"mmorpg.support_gem.chaos_damage": "Поддержка урона хаосом",
-	"mmorpg.support_gem.chaos_pene": "Поддержка пронизывания хаосом",
-	"mmorpg.support_gem.cold_damage": "Поддержка холода",
-	"mmorpg.support_gem.crit_chance": "Поддержка шанса критического удара",
-	"mmorpg.support_gem.crit_damage": "Поддержка урона критическим ударом",
-	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "Уверенное разрушение",
-	"mmorpg.support_gem.dot_damage": "Поддержка урона за время",
-	"mmorpg.support_gem.effect_duration": "Улучшение длительности эффекта",
-	"mmorpg.support_gem.electrify_chance": "Поддержка шанса поражения электричеством",
-	"mmorpg.support_gem.energy_on_hit": "Поддержка восстановления энергии при ударе",
-	"mmorpg.support_gem.fire_damage": "Поддержка огня",
-	"mmorpg.support_gem.fire_pene": "Поддержка пронизывания огнем",
-	"mmorpg.support_gem.freeze_chance": "Поддержка шанса заморозить",
-	"mmorpg.support_gem.gmp": "Поддержка большего количества снарядов",
-	"mmorpg.support_gem.gmp_barrage": "Поддержка большего количества снарядов для залпа",
-	"mmorpg.support_gem.heal_at_low": "Немедленная помощь",
-	"mmorpg.support_gem.health_on_hit": "Поддержка восстановления здоровья при ударе",
-	"mmorpg.support_gem.inc_heal": "Увеличение восстановления здоровья",
-	"mmorpg.support_gem.lightning_damage": "Поддержка молнии",
-	"mmorpg.support_gem.lightning_pene": "Поддержка пронизывания молнией",
-	"mmorpg.support_gem.lmp": "Поддержка меньшего количества снарядов",
-	"mmorpg.support_gem.lmp_barrage": "Поддержка меньшего количества снарядов для залпа",
-	"mmorpg.support_gem.magic_shield_on_hit": "Поддержка восстановления магического щита при ударе",
-	"mmorpg.support_gem.mana_on_hit": "Поддержка восстановления маны при ударе",
-	"mmorpg.support_gem.mana_saver_dmg": "Поддержка экономии маны при нанесении урона",
-	"mmorpg.support_gem.melee_damage": "Поддержка урона в ближнем бою",
-	"mmorpg.support_gem.minion_threat": "Улучшение угрозы миньона",
-	"mmorpg.support_gem.physical_damage": "Поддержка физического урона",
-	"mmorpg.support_gem.physical_pene": "Поддержка пробивания физического сопротивления",
-	"mmorpg.support_gem.plus_aoe": "Поддержка увеличенной области",
-	"mmorpg.support_gem.poison_chance": "Поддержка шанса отравления",
-	"mmorpg.support_gem.proc_freeze": "Поддержка ледокола",
-	"mmorpg.support_gem.proc_shock": "Shock Support Gem",
-	"mmorpg.support_gem.proj_speed": "Поддержка ускорения снарядов",
-	"mmorpg.support_gem.ranged_damage": "Поддержка урона в дальнем бою",
-	"mmorpg.support_gem.rare_cooldown": "Поддержка большего времени восстановления редких умений",
-	"mmorpg.support_gem.rare_mana_eff": "Поддержка увеличения затрат маны редких умений",
-	"mmorpg.support_gem.small_cdr": "Поддержка уменьшения времени восстановления малого умения",
-	"mmorpg.support_gem.spell_damage": "Поддержка урона от умений",
-	"mmorpg.support_gem.spell_damage_no_crit": "Поддержка ограниченного разрушения",
-	"mmorpg.support_gem.summon_damage": "Поддержка урона от призванных существ",
-	"mmorpg.support_gem.summon_duration": "Поддержка времени существования призванных существ",
-	"mmorpg.support_gem.summon_health": "Поддержка здоровья призванных существ",
-	"mmorpg.support_gem.threat": "Большая поддержка угрозы",
-	"mmorpg.support_gem.totem_damage": "Поддержка урона от тотемов",
-	"mmorpg.support_gem.totem_dmg_cdr": "Поддержка увеличенного времени восстановления урона от тотемов",
-	"mmorpg.support_gem.water_pene": "Поддержка пробивания холодом",
+	"mmorpg.support_gem.ailment_damage_less_hit_dmg": "Самоцвет поддержки урона от недугов",
+	"mmorpg.support_gem.aoe_dmg": "Самоцвет поддержки фокуса области",
+	"mmorpg.support_gem.bleed_chance": "Самоцвет поддержки шанса кровотечения",
+	"mmorpg.support_gem.burn_chance": "Самоцвет поддержки шанса обжига",
+	"mmorpg.support_gem.chaos_damage": "Самоцвет поддержки урона хаосом",
+	"mmorpg.support_gem.chaos_pene": "Самоцвет поддержки пронизывания хаосом",
+	"mmorpg.support_gem.cold_damage": "Самоцвет поддержки холода",
+	"mmorpg.support_gem.crit_chance": "Самоцвет поддержки шанса критического удара",
+	"mmorpg.support_gem.crit_damage": "Самоцвет поддержки урона критическим ударом",
+	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "Самоцвет поддержки уверенного разрушение",
+	"mmorpg.support_gem.dot_damage": "Самоцвет поддержки урона за время",
+	"mmorpg.support_gem.effect_duration": "Самоцвет поддержки длительности эффекта",
+	"mmorpg.support_gem.electrify_chance": "Самоцвет поддержки шанса поражения электричеством",
+	"mmorpg.support_gem.energy_on_hit": "Самоцвет поддержки восстановления энергии при ударе",
+	"mmorpg.support_gem.fire_damage": "Самоцвет поддержки огня",
+	"mmorpg.support_gem.fire_pene": "Самоцвет поддержки пронизывания огнем",
+	"mmorpg.support_gem.freeze_chance": "Самоцвет поддержки шанса заморозить",
+	"mmorpg.support_gem.gmp": "Самоцвет поддержки большего количества снарядов",
+	"mmorpg.support_gem.gmp_barrage": "Самоцвет поддержки большего количества снарядов для залпа",
+	"mmorpg.support_gem.heal_at_low": "Самоцвет поддержки немедленная помощь",
+	"mmorpg.support_gem.health_on_hit": "Самоцвет поддержки восстановления здоровья при ударе",
+	"mmorpg.support_gem.inc_heal": "Самоцвет поддержки увеличение восстановления здоровья",
+	"mmorpg.support_gem.lightning_damage": "Самоцвет поддержки молнии",
+	"mmorpg.support_gem.lightning_pene": "Самоцвет поддержки пронизывания молнией",
+	"mmorpg.support_gem.lmp": "Самоцвет поддержки меньшего количества снарядов",
+	"mmorpg.support_gem.lmp_barrage": "Самоцвет поддержки меньшего количества снарядов для залпа",
+	"mmorpg.support_gem.magic_shield_on_hit": "Самоцвет поддержки восстановления магического щита при ударе",
+	"mmorpg.support_gem.mana_on_hit": "Самоцвет поддержки восстановления маны при ударе",
+	"mmorpg.support_gem.mana_saver_dmg": "Самоцвет поддержки экономии маны при нанесении урона",
+	"mmorpg.support_gem.melee_damage": "Самоцвет поддержки урона в ближнем бою",
+	"mmorpg.support_gem.minion_threat": "Самоцвет поддержки улучшения угрозы миньона",
+	"mmorpg.support_gem.physical_damage": "Самоцвет поддержки физического урона",
+	"mmorpg.support_gem.physical_pene": "Самоцвет поддержки пробивания физического сопротивления",
+	"mmorpg.support_gem.plus_aoe": "Самоцвет поддержки увеличенной области",
+	"mmorpg.support_gem.poison_chance": "Самоцвет поддержки шанса отравления",
+	"mmorpg.support_gem.proc_freeze": "Самоцвет поддержки ледокола",
+	"mmorpg.support_gem.proc_shock": "Самоцвет поддержки электрошока",
+	"mmorpg.support_gem.proj_speed": "Самоцвет поддержки ускорения снарядов",
+	"mmorpg.support_gem.ranged_damage": "Самоцвет поддержки урона в дальнем бою",
+	"mmorpg.support_gem.rare_cooldown": "Самоцвет поддержки большего времени восстановления редких умений",
+	"mmorpg.support_gem.rare_mana_eff": "Самоцвет поддержки увеличения затрат маны редких умений",
+	"mmorpg.support_gem.small_cdr": "Самоцвет поддержки уменьшения времени восстановления малого умения",
+	"mmorpg.support_gem.spell_damage": "Самоцвет поддержки урона от умений",
+	"mmorpg.support_gem.spell_damage_no_crit": "Самоцвет поддержки ограниченного разрушения",
+	"mmorpg.support_gem.summon_damage": "Самоцвет поддержки урона от призванных существ",
+	"mmorpg.support_gem.summon_duration": "Самоцвет поддержки времени существования призванных существ",
+	"mmorpg.support_gem.summon_health": "Самоцвет поддержки здоровья призванных существ",
+	"mmorpg.support_gem.threat": "Самоцвет поддержки большой угрозы",
+	"mmorpg.support_gem.totem_damage": "Самоцвет поддержки урона от тотемов",
+	"mmorpg.support_gem.totem_dmg_cdr": "Самоцвет поддержки увеличенного времени восстановления урона от тотемов",
+	"mmorpg.support_gem.water_pene": "Самоцвет поддержки пробивания холодом",
 
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 
@@ -2149,7 +2149,7 @@
 	"mmorpg.word.oblivion": "Забвение",
 	"mmorpg.word.on_slots": "Слоты: ",
 	"mmorpg.word.only_show_allocated": "Показать только выделенные таланты, Включить/Выключить",
-	"mmorpg.word.per_stack": " (per stack): ",
+	"mmorpg.word.per_stack": " (за стак): ",
 	"mmorpg.word.pet_basic": "Обычная атака питомца: ",
 	"mmorpg.word.player_affixes": "Аффиксы игрока",
 	"mmorpg.word.possible_dros": "Возможные выпадения экипировки: ",
