PR Removed "Updated" and added Move_speed to stats

--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -130,3 +130,4 @@
 "stat.mmorpg.intelligence": "M&S Intelligence",
 "stat.mmorpg.dexterity": "M&S Dexterity",
 "stat.mmorpg.strength": "M&S Strength",
+"stat.mmorpg.move_speed": "M&S Movement Speed",
